# smart-reader-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  biome.json  package.json  server.json  tsconfig.build.json  tsconfig.json
.changeset/: read-media-v0-1.md
.doctrine/: project.json
.github/workflows/: ci.yml  native-build.yml  release.yml  rust-parity-differential.yml
crates/smart-reader-cli/: Cargo.toml
crates/smart-reader-cli/src/: main.rs
crates/smart-reader-core/: Cargo.toml
crates/smart-reader-core/src/: delegate.rs  envelope.rs  lib.rs  policy.rs  read_media.rs  sniff.rs
crates/smart-reader-core/tests/: read_media_golden_parity.rs
crates/smart-reader-mcp-server/: Cargo.toml
crates/smart-reader-mcp-server/src/: http_transport.rs  lib.rs  main.rs  read_media.rs  tool_routes.rs
crates/smart-reader-mcp-server/tests/: read_media_golden_parity.rs  smart_reader_mcp_differential.rs
docs/adr/: 0001-boundary.md  0002-reader-portfolio-architecture.md  ADR-3-mcp-family-sota-roadmap.md
docs/roadmap/: sota-family-roadmap.md
docs/specs/: migration-ledger.json  operating-model.md  smart-reader-mcp-parity-slice.json
examples/: read-media-image.json  read-media-pdf.json  read-media-unsupported.json  read-media-video.json  sample-envelope.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
scripts/: assemble-multiarch-natives.ts  assert-parity-proof-integrity.py  check-no-ts-http-backend.sh  check-no-ts-read-media.sh  check-no-ts-stdio-mcp.sh  check-ts-adapter-deletion-ready.sh  compute-proof-input-digest.py  doctor-cli.ts  launch-read-media-proof.mjs  launch-sibling-proof.mjs  proof_input_digest.py  publish-platform-packages.ts  release-gate.ts  run-smart-reader-mcp-differential.sh  stage-rust-mcp.ts  sync-platform-versions.ts  verify-multiarch-readback.ts
scripts/differential/: smart-reader-mcp-oracle.ts
src/: doctor-cli.ts  doctor.ts  index.ts  mcp.ts  toolContract.ts
src/delegate/: delegateToReader.ts  delegationContract.ts
src/engine/: rust-read-media.ts  rust-sniff.ts
src/evidence/: envelope.ts
src/handlers/: readMedia.ts
src/schemas/: readMedia.ts
src/sniff/: formatSniffer.ts  mislabel.ts
test/: check-no-ts-http-backend.test.ts  check-no-ts-read-media.test.ts  check-no-ts-stdio-mcp.test.ts  corpusManifest.test.ts  differentialHarness.matrix.test.ts  doctor.test.ts  httpTransport.matrix.test.ts  mislabel.test.ts  readMedia.parity.test.ts  readmeDiscovery.test.ts  releaseGate.test.ts  rustSniff.boundary.test.ts  shippedPath.matrix.test.ts  tsAdapterDeletion.matrix.test.ts
test/delegate/: delegateToReader.integration.test.ts  (+2 more)
verification/: smart-reader-cycle49-read-media-rust-impl.json  smart-reader-cycle62-stdio-transport-rust-impl.json  smart-reader-cycle63-read-media-rust-impl.json  smart-reader-cycle64-stdio-transport-rust-impl.json
(+9 files in other folders)
