[package]
name = "smart-reader-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native MCP server for smart-reader-mcp (rmcp)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "smart-reader-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
rmcp = { version = "0.16.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
smart-reader-core = { path = "../smart-reader-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.20.0"